# tap-hookdeck

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yaml  build.yml  test.yaml  test.yml  update_catalog.yml
scripts/: update_catalog.py
tap_hookdeck/: __init__.py  __main__.py  client.py  openapi.json  streams.py  tap.py
tests/: conftest.py  test_core.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[connections].json  test_catalog_changes[destinations].json  test_catalog_changes[issue_triggers].json  test_catalog_changes[requests].json  test_catalog_changes[sources].json  test_catalog_changes[transformations].json
